--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+LazyData: true
 Imports: 
     corrplot,
     dplyr,
